--- a/demo.html
+++ b/demo.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137828153-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137828153-1');
+</script>
+
 <title>HTML Tutorial</title>
 <body>
 
 <h1>This is a heading</h1>
+  
 <p>This is a paragraph.</p>
 
 </body>
