--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137817217-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137817217-1');
+</script>
+
 <body>
 
 <h1>This is a heading</h1>
