--- a/demo.html
+++ b/demo.html
@@ -1,20 +1,48 @@
-<!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137817217-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <head>
+        <title>railway reservation form </title>
+    </head>
+    <body bgcolor="#0AAFFBC">
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137817217-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-  gtag('config', 'UA-137817217-1');
-</script>
-
-<body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+    <form name="railway">
+        <center>
+        <h1><marquee bgcolor="#0FBF00">Railway Reservation System </marquee> </h1>
+     <table>
+     <tr>
+         <td>From:</td>
+         <td><input type="text" name=""railway"</td>
+         </tr>
+     <tr>
+     <td>To:</td>
+     <td><input type="text" name="txt2"</td>
+             </tr>
+        <tr>
+            <td>Name:</td>
+            <td><input type="text" name=""</td></tr>
+         <tr>
+         <td>Age:</td>
+         <td><input type="number" name=""</td>
+         </tr> 
+         <tr>
+         <td>Address:</td>
+         <td><input type="text" nqme=""</td></tr> 
+          <tr>
+          <td>Payment options:</td>
+         <td> 
+          <input type="radio" name="payment" value="cc" />Credit Card <br />
+<input type="radio" name="payment" value="dc" />Debit card <br /> 
+<input type="radio" name="payment" value="wallet">wallet<br/>
+        </td>
+          
+          <tr>
+           <td><input type="submit" value="submit"</td>
+           <td><input type="submit" value="Cancel"</td></tr>   
+         </table>   
+    </body>
 </html>
